--- a/smart-calendar/src/app/shared/components/sidebar/sidebar.scss
+++ b/smart-calendar/src/app/shared/components/sidebar/sidebar.scss
@@ -3,7 +3,7 @@
 
 .sidebar {
   width: 280px;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: linear-gradient(135deg, #6d3bf7 0%, #000000 100%);
   box-shadow: $shadow;
   color: white;
   @include flex-column;
